--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "typescript": "^4.9.4"
   },
