--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "tsc --init"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "ts-node": "^10.9.1"
   },
