--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsc --init"
+    "test": "tsc --init",
+    "dev": "tsc-node-dev"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@types/sequelize": "^4.28.14",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "postgres": "^3.3.2",
     "sequelize": "^6.27.0",
     "typescript": "^4.9.4"
   },
