--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,16 @@
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "@types/sequelize": "^4.28.14",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "postgres": "^3.3.2",
     "sequelize": "^6.27.0",
     "typescript": "^4.9.4"
