--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2",
     "ts-node": "^10.9.1",
@@ -24,7 +25,8 @@
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.2",
     "sequelize": "^6.27.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "keywords": [],
   "author": "",
