--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc --init",
-    "dev": "tsnd --respawn app.ts"
+    "dev": "tsnd --respawn app.ts",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.5.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   },
@@ -25,6 +26,7 @@
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.2",
     "sequelize": "^6.27.0",
+    "sequelize-cli": "^6.5.2",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0"
   },
