--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@types/sequelize": "^4.28.14",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
