--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20",
@@ -25,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "postgres": "^3.3.2",
