--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router": "^6.6.0",
     "react-router-dom": "^6.5.0",
+    "reactstrap": "^9.1.5",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
