--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,7 +12,12 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["airbnb", "plugin:react/recommended"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "extends": ["plugin:react/recommended"],
   "plugins": ["react"],
   "rules": {
     "react/jsx-filename-extension": [
