add changes to eslint

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -31,5 +31,6 @@
     "import/no-unresolved": "off",
     "no-shadow": "off"
   },
-  "ignorePatterns": ["dist/", "build/"]
+  "ignorePatterns": ["dist/", "build/"],
+  "root": true
 }
