--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "db:migrate:undo:all": "sequelize-cli db:migrate:undo:all"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^8.5.9",
