--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.17",
     "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
